--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
           <ul>
             <li><a href="#">PORTFOLIO</a></li>
             <li><a href="#">ABOUT</a></li>
-            <li><a href="#">CONTACT</a></li>
+            <li><a href="#">HISTORY</a></li>
           </ul>
         </nav>
       </header>
