git commit -a // 3rd commit
git commit -m "3rd commit"
:wq

$ :wq
"

--- a/index.html
+++ b/index.html
@@ -6,29 +6,31 @@
     <!-- このmetaタグがないと、レスポンシブにできない。なかったから入れたよ。 -->
     <title>tomd.site2018</title>
     <link rel="stylesheet" href="css/cssreset-min.css">
-    <link rel="stylesheet" href="css/css.css">
+    <link rel="stylesheet" href="css/common.css">
+    <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:600" rel="stylesheet">
   </head>
 
   <body>
-    <div id="wrap">    
+    <div id="wrap">
+
+
 		<header>
         <h1 class="top_logo">
           <img src="images/pftop.PNG" alt="tomd.site_ロゴ">
         </h1>
         <nav class="topnav">
           <ul>
+            <li><a href="#">HOME</a></li>
             <li><a href="#">PORTFOLIO</a></li>
-            <li><a href="#">ABOUT</a></li>
-            <li><a href="#">HISTORY</a></li>
+            <li><a href="./about.html">ABOUT</a></li>
           </ul>
         </nav>
       </header>
-		
-      <main>
-        <!-- 今回は<main>要素がないから、空でいいと思う、<main>自体無しでもいいのかな。
-          ポートフォリオだからOKだけど、一般的には情報不足で検索に引っ掛かりづらくなるから、仕事で作る場合は必ず埋まる。 -->
-      </main>
+
+      <!-- <main></main> -->
+      
       <footer>
         <p class="copy">copyright ©tomd.site2018 All Rights Reserved.</p>
       </footer>
