--- a/about.html
+++ b/about.html
@@ -7,6 +7,7 @@
     <title>tomd.site2018</title>
     <link rel="stylesheet" href="css/cssreset-min.css">
     <link rel="stylesheet" href="css/pages.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:600" rel="stylesheet">
   </head>
 
@@ -18,9 +19,9 @@
         </h1>
         <nav class="about_nav">
           <ul>
+            <li><a href="./index.html">HOME</a></li>
             <li><a href="#">PORTFOLIO</a></li>
             <li><a href="#">ABOUT</a></li>
-            <li><a href="#">CONTACT</a></li>
           </ul>
         </nav>
       </header>
@@ -39,8 +40,14 @@
 		  </div>
       </main>
       <footer>
-        <p class="copy">copyright ©tomd.site2018 All Rights Reserved.</p>
+        <p class="copy">&copy;tomd.site2018.</p>
       </footer>
     </div>
+
+
+    <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
+    <script>
+    
+    </script>
   </body>
 </html>
