--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           <ul>
             <li><a href="#">HOME</a></li>
             <li><a href="#">PORTFOLIO</a></li>
-            <li><a href="./about.html">ABOUT</a></li>
+            <li><a href="#">ABOUT</a></li>
           </ul>
         </nav>
       </header>
