--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </h1>
         <nav class="topnav">
           <ul>
-            <li><a href="#">HOME</a></li>
+            <li><a href="#">HOMESS</a></li>
             <li><a href="#">PORTFOLIO</a></li>
             <li><a href="#">ABOUT</a></li>
           </ul>
